; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/mly/extr_mly.c_mly_cam_detach.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/mly/extr_mly.c_mly_cam_detach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mly_softc = type { i32, i32*, i32** }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mly_softc*)* @mly_cam_detach to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mly_cam_detach(%struct.mly_softc* %0) #0 {
  %2 = alloca %struct.mly_softc*, align 8
  %3 = alloca i32, align 4
  store %struct.mly_softc* %0, %struct.mly_softc** %2, align 8
  %4 = call i32 @debug_called(i32 1)
  %5 = load %struct.mly_softc*, %struct.mly_softc** %2, align 8
  %6 = call i32 @MLY_LOCK(%struct.mly_softc* %5)
  store i32 0, i32* %3, align 4
  br label %7

7:                                                ; preds = %41, %1
  %8 = load i32, i32* %3, align 4
  %9 = load %struct.mly_softc*, %struct.mly_softc** %2, align 8
  %10 = getelementptr inbounds %struct.mly_softc, %struct.mly_softc* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 8
  %12 = icmp slt i32 %8, %11
  br i1 %12, label %13, label %44

13:                                               ; preds = %7
  %14 = load %struct.mly_softc*, %struct.mly_softc** %2, align 8
  %15 = getelementptr inbounds %struct.mly_softc, %struct.mly_softc* %14, i32 0, i32 2
  %16 = load i32**, i32*** %15, align 8
  %17 = load i32, i32* %3, align 4
  %18 = sext i32 %17 to i64
  %19 = getelementptr inbounds i32*, i32** %16, i64 %18
  %20 = load i32*, i32** %19, align 8
  %21 = icmp ne i32* %20, null
  br i1 %21, label %22, label %40

22:                                               ; preds = %13
  %23 = load %struct.mly_softc*, %struct.mly_softc** %2, align 8
  %24 = getelementptr inbounds %struct.mly_softc, %struct.mly_softc* %23, i32 0, i32 2
  %25 = load i32**, i32*** %24, align 8
  %26 = load i32, i32* %3, align 4
  %27 = sext i32 %26 to i64
  %28 = getelementptr inbounds i32*, i32** %25, i64 %27
  %29 = load i32*, i32** %28, align 8
  %30 = call i32 @cam_sim_path(i32* %29)
  %31 = call i32 @xpt_bus_deregister(i32 %30)
  %32 = load %struct.mly_softc*, %struct.mly_softc** %2, align 8
  %33 = getelementptr inbounds %struct.mly_softc, %struct.mly_softc* %32, i32 0, i32 2
  %34 = load i32**, i32*** %33, align 8
  %35 = load i32, i32* %3, align 4
  %36 = sext i32 %35 to i64
  %37 = getelementptr inbounds i32*, i32** %34, i64 %36
  %38 = load i32*, i32** %37, align 8
  %39 = call i32 @cam_sim_free(i32* %38, i32 0)
  br label %40

40:                                               ; preds = %22, %13
  br label %41

41:                                               ; preds = %40
  %42 = load i32, i32* %3, align 4
  %43 = add nsw i32 %42, 1
  store i32 %43, i32* %3, align 4
  br label %7

44:                                               ; preds = %7
  %45 = load %struct.mly_softc*, %struct.mly_softc** %2, align 8
  %46 = call i32 @MLY_UNLOCK(%struct.mly_softc* %45)
  %47 = load %struct.mly_softc*, %struct.mly_softc** %2, align 8
  %48 = getelementptr inbounds %struct.mly_softc, %struct.mly_softc* %47, i32 0, i32 1
  %49 = load i32*, i32** %48, align 8
  %50 = icmp ne i32* %49, null
  br i1 %50, label %51, label %56

51:                                               ; preds = %44
  %52 = load %struct.mly_softc*, %struct.mly_softc** %2, align 8
  %53 = getelementptr inbounds %struct.mly_softc, %struct.mly_softc* %52, i32 0, i32 1
  %54 = load i32*, i32** %53, align 8
  %55 = call i32 @cam_simq_free(i32* %54)
  br label %56

56:                                               ; preds = %51, %44
  ret void
}

declare dso_local i32 @debug_called(i32) #1

declare dso_local i32 @MLY_LOCK(%struct.mly_softc*) #1

declare dso_local i32 @xpt_bus_deregister(i32) #1

declare dso_local i32 @cam_sim_path(i32*) #1

declare dso_local i32 @cam_sim_free(i32*, i32) #1

declare dso_local i32 @MLY_UNLOCK(%struct.mly_softc*) #1

declare dso_local i32 @cam_simq_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
